[package]
name = "candle-gen-wan"
version = "0.0.0"
edition = "2021"
description = "Wan2.2 video provider crate for candle-gen — the Windows/CUDA sibling of mlx-gen-wan."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "video", "wan", "inference"]
categories = ["science"]

[dependencies]
candle-gen = { path = "../candle-gen" }
inventory = { workspace = true }
# Wan has NO candle-transformers reference: the WanTransformer3DModel DiT, the causal-Conv3d
# AutoencoderKLWan temporal VAE, the UMT5-XXL text encoder, and the UniPC flow-match scheduler are
# all written here on candle-core/candle-nn (candle ships no conv3d — see `conv3d`).
tokenizers = { workspace = true }
# Deterministic CPU-seeded initial noise (sc-3673 parity).
rand = { workspace = true }
rand_distr = { workspace = true }

[features]
default = []
metal = ["candle-gen/metal"]
cuda = ["candle-gen/cuda"]
flash-attn = ["candle-gen/flash-attn"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
sceneworks-gen-core-testkit = { git = "https://github.com/michaeltrefry/mlx-gen", rev = "e9c569c211b77fb9061aa3968dfd03bd02804109" }
