[package]
name = "candle-gen-wan"
version = "0.0.0"
edition = "2021"
description = "Wan2.2 video provider crate for candle-gen — the Windows/CUDA sibling of mlx-gen-wan."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "video", "wan", "inference"]
categories = ["science"]

[dependencies]
candle-gen = { path = "../candle-gen" }
inventory = { workspace = true }
# Wan has NO candle-transformers reference: the WanTransformer3DModel DiT, the causal-Conv3d
# AutoencoderKLWan temporal VAE, the UMT5-XXL text encoder, and the UniPC flow-match scheduler are
# all written here on candle-core/candle-nn (candle ships no conv3d — see `conv3d`).
tokenizers = { workspace = true }
# Deterministic CPU-seeded initial noise (sc-3673 parity).
rand = { workspace = true }
rand_distr = { workspace = true }
# Read a trained adapter `.safetensors`' `__metadata__` (the LoKr `networkType`/`rank`/`alpha`), which
# candle's own `safetensors::load` drops — the inference-side adapter merge (sc-5167, `adapters`).
safetensors = "0.7"

[features]
default = []
metal = ["candle-gen/metal"]
cuda = ["candle-gen/cuda"]
flash-attn = ["candle-gen/flash-attn"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
sceneworks-gen-core-testkit = { git = "https://github.com/michaeltrefry/mlx-gen", rev = "af190c73c155cc6c43d1586833f0f128c109f455" }
