[package]
name = "candle-gen-z-image"
version = "0.0.0"
edition = "2021"
description = "Z-Image (Tongyi Z-Image-Turbo) provider crate for candle-gen — the Windows/CUDA sibling of mlx-gen-z-image."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "diffusion", "z-image", "inference"]
categories = ["science"]

[dependencies]
# Core crate — re-exports gen_core + candle, so this provider links exactly one gen-core / candle
# build (single resolution; see scripts/check-gen-core-skew.sh).
candle-gen = { path = "../candle-gen" }
# Link-time self-registration into gen-core's model registry (the `inventory::submit!` below).
inventory = { workspace = true }
# Z-Image building blocks (Qwen3 text encoder / DiT transformer / AutoencoderKL VAE / flow-match
# scheduler). Backend features are passed through from this crate's features below so it shares
# candle-gen's exact candle build.
candle-transformers = { workspace = true }
# Qwen tokenizer.json loading. The Qwen chat-template + host-vec tokenization itself comes from
# gen-core's `TextTokenizer` (re-exported through `candle_gen::gen_core`); this is only the
# underlying HF `tokenizers` runtime gen-core builds on, shared at the workspace pin.
tokenizers = { workspace = true }
# Deterministic CPU-seeded initial noise (sc-3673 parity) — NOT candle's CUDA `randn`.
rand = { workspace = true }
rand_distr = { workspace = true }

[features]
# Pass the backend selection through to the core crate AND candle-transformers so a downstream
# `--features metal`/`cuda` on this provider crate selects the matching candle backend everywhere.
default = []
metal = ["candle-gen/metal", "candle-transformers/metal"]
cuda = ["candle-gen/cuda", "candle-transformers/cuda"]
flash-attn = ["candle-gen/flash-attn", "candle-transformers/flash-attn"]

[dev-dependencies]
# `examples/txt2img.rs` smoke driver only — encode the produced `gen_core::Image` (RGB8) to PNG so a
# real GPU run can be eyeballed. Not a library dependency (the worker owns asset writes).
image = { version = "0.25", default-features = false, features = ["png"] }
# gen-core conformance suite (sc-4481): drives this provider through the public Generator contract
# (cancel / progress / seed-determinism / capability honesty). Pinned to the SAME gen-core rev the
# workspace pins (8355152) so it shares one contract build. Used by tests/conformance.rs (cuda-gated,
# #[ignore]d — it runs a real generate, so it needs weights + GPU).
sceneworks-gen-core-testkit = { git = "https://github.com/michaeltrefry/mlx-gen", rev = "8355152a79d6d328d3798c19a2b5a37bb8468622" }
